--- a/templates/includes/toasts/toast_error.html
+++ b/templates/includes/toasts/toast_error.html
@@ -1,13 +1,15 @@
-<div class="toast custom-toast rounded-0 border-top-0" data-autohide="false">
+<div class="toast custom-toast rounded-0 border-top-0 bg-dark text-white shadow" data-autohide="true" data-delay="7000">
     <div class="arrow-up arrow-danger"></div>
     <div class="w-100 toast-capper bg-danger"></div>
-    <div class="toast-header bg-white text-dark">
-        <strong class="mr-auto">Error!</strong>
-        <button type="button" class="ml-2 mb-1 close text-dark" data-dismiss="toast" aria-label="Close">
+
+    <div class="toast-header bg-dark text-white border-0">
+        <strong class="me-auto logo-font">Error!</strong>
+        <button type="button" class="close text-white ml-2 mb-1" data-dismiss="toast" aria-label="Close">
             <span aria-hidden="true">&times;</span>
         </button>
     </div>
-    <div class="toast-body bg-white">
+
+    <div class="toast-body bg-dark text-white">
         {{ message }}
     </div>
 </div>
