--- a/templates/includes/toasts/toast_success.html
+++ b/templates/includes/toasts/toast_success.html
@@ -8,6 +8,8 @@
                 Tool Removed
             {% elif 'added' in message|lower %}
                 Tool Added!
+            {% elif 'wishlist' in message|lower %}
+                Wishlist Update
             {% elif 'order successfully processed' in message|lower %}
                 Order Confirmed
             {% else %}
@@ -43,6 +45,7 @@
                     </div>
                 {% endfor %}
             </div>
+
             <div class="row">
                 <div class="col">
                     <p class="mt-3 mb-1 font-weight-bold">
