--- a/templates/allauth/account/signup.html
+++ b/templates/allauth/account/signup.html
@@ -14,7 +14,7 @@
 
     <p>
       {% blocktrans %}
-        Already have an account? Then please <a class="text-info" href="{{ login_url }}">sign in</a>.
+        Already have an account? Then please <a class="text-info" href="{{ login_url }}">SIGN IN</a>.
       {% endblocktrans %}
     </p>
 
