--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -5,10 +5,12 @@
 {% block body_class %}checkout-page{% endblock %}
 
 {% block extra_css %}
+<!-- Checkout page CSS -->
 <link rel="stylesheet" href="{% static 'checkout/css/checkout.css' %}">
 {% endblock %}
 
 {% block page_header %}
+<!-- Empty header for layout consistency -->
 <div class="container header-container">
     <div class="row">
         <div class="col"></div>
@@ -17,8 +19,10 @@
 {% endblock %}
 
 {% block content %}
+<!-- Background overlay -->
 <div class="overlay"></div>
 
+<!-- Main checkout content -->
 <div class="checkout-page-wrapper">
     <div class="container checkout-content">
         <div class="row">
@@ -30,7 +34,7 @@
         </div>
 
         <div class="row">
-            <!-- Order Summary -->
+            <!-- Right column: Order summary -->
             <div class="col-12 col-lg-6 order-lg-last mb-5">
                 <p class="text-muted">Order Summary ({{ product_count }})</p>
                 <div class="row">
@@ -41,9 +45,11 @@
                         <p class="mb-1 mt-0 small text-muted">Subtotal</p>
                     </div>
                 </div>
+
                 {% for item in bag_items %}
                 <div class="row">
                     <div class="col-2 mb-1">
+                        <!-- Product image -->
                         <a href="{% url 'product_detail' item.product.id %}">
                             {% if item.product.image %}
                             <img class="w-100" src="{{ item.product.image.url }}" alt="{{ item.product.name }}">
@@ -53,16 +59,21 @@
                         </a>
                     </div>
                     <div class="col-7">
+                        <!-- Product details -->
                         <p class="my-0"><strong>{{ item.product.name }}</strong></p>
                         <p class="my-0 small">Size: {% if item.product.has_sizes %}{{ item.size|upper }}{% else %}N/A{% endif %}</p>
                         <p class="my-0 small text-muted">Qty: {{ item.quantity }}</p>
                     </div>
                     <div class="col-3 text-right">
+                        <!-- Product subtotal -->
                         <p class="my-0 small text-muted">£{{ item.product.price|floatformat:2 }}</p>
                     </div>
                 </div>
                 {% endfor %}
+
                 <hr class="my-0">
+
+                <!-- Total summary -->
                 <div class="row text-black text-right">
                     <div class="col-7 offset-2">
                         <p class="my-0">Order Total:</p>
@@ -77,17 +88,21 @@
                 </div>
             </div>
 
-            <!-- Checkout Form -->
+            <!-- Left column: Checkout form -->
             <div class="col-12 col-lg-6">
                 <p class="text-muted">Please fill out the form below to complete your order</p>
                 <form action="{% url 'checkout' %}" method="POST" id="payment-form">
                     {% csrf_token %}
+
+                    <!-- Customer details -->
                     <fieldset class="rounded px-3 mb-5">
                         <legend class="fieldset-label small text-black px-2 w-auto">Details</legend>
                         {{ order_form.full_name|as_crispy_field }}
                         {{ order_form.email|as_crispy_field }}
                         {{ order_form.phone_number|as_crispy_field }}
                     </fieldset>
+
+                    <!-- Delivery information -->
                     <fieldset class="rounded px-3 mb-5">
                         <legend class="fieldset-label small text-black px-2 w-auto">Delivery</legend>
                         {{ order_form.street_address1|as_crispy_field }}
@@ -108,6 +123,8 @@
                             {% endif %}
                         </div>
                     </fieldset>
+
+                    <!-- Stripe payment section -->
                     <fieldset class="px-3">
                         <legend class="fieldset-label small text-black px-2 w-auto">Payment</legend>
                         <div class="mb-3" id="card-element"></div>
@@ -115,6 +132,7 @@
                         <input type="hidden" value="{{ client_secret }}" name="client_secret">
                     </fieldset>
 
+                    <!-- Form buttons -->
                     <div class="submit-button text-right mt-5 mb-2">                    
                         <a href="{% url 'view_bag' %}" class="btn btn-outline-navy rounded-0 mr-2">
                             <span class="icon"><i class="fas fa-chevron-left"></i></span>
@@ -135,7 +153,7 @@
     </div>
 </div>
 
-<!-- Loading Overlay -->
+<!-- Loading overlay -->
 <div id="loading-overlay" class="loading-spinner justify-content-center align-items-center">
     <div class="text-center">
         <i class="fas fa-cog fa-spin fa-4x text-light mb-3"></i>
@@ -147,6 +165,7 @@
 
 {% block postloadjs %}
 {{ block.super }}
+<!-- Stripe payment script -->
 {{ stripe_public_key|json_script:"id_stripe_public_key" }}
 {{ client_secret|json_script:"id_client_secret" }}
 <script src="{% static 'checkout/js/stripe_elements.js' %}"></script>
