--- a/checkout/templates/checkout/checkout_success.html
+++ b/checkout/templates/checkout/checkout_success.html
@@ -1,222 +1,138 @@
 {% extends "base.html" %}
 {% load static %}
 
-{% block extra_css %}
-    <link rel="stylesheet" href="{% static 'checkout/css/checkout.css' %}">
-{% endblock %}
+{% block body_class %}checkout-page{% endblock %}
 
-{% block page_header %}
-    <div class="container header-container">
-        <div class="row">
-            <div class="col"></div>
-        </div>
-    </div>
+{% block extra_css %}
+<link rel="stylesheet" href="{% static 'checkout/css/checkout.css' %}">
 {% endblock %}
 
 {% block content %}
 <div class="overlay"></div>
-<div class="container">
-    <div class="row">
-        <div class="col">
-            <hr>
-            <h2 class="logo-font mb-4">Order Confirmed</h2>
-            <hr>
-            <p class="text-black">
-                We've locked and loaded your tools! A confirmation email is heading to <strong>{{ order.email }}</strong>.
-            </p>
-        </div>
-    </div>
 
-    <div class="row">
-        <div class="col-12 col-lg-7">
-            <div class="order-confirmation-wrapper p-2 border">
-                <div class="row">
-                    <div class="col">
-                        <small class="text-muted">Order Info:</small>
-                    </div>
-                </div>
-
-                <div class="row">
-                    <div class="col-12 col-md-4">
-                        <p class="mb-0 text-black font-weight-bold">Order Number</p>
-                    </div>
-                    <div class="col-12 col-md-8 text-md-right">
-                        <p class="mb-0">{{ order.order_number }}</p>
-                    </div>
-                </div>
-
-                <div class="row">
-                    <div class="col-12 col-md-4">
-                        <p class="mb-0 text-black font-weight-bold">Order Date</p>
-                    </div>
-                    <div class="col-12 col-md-8 text-md-right">
-                        <p class="mb-0">{{ order.date }}</p>
-                    </div>
-                </div>
-
-                <div class="row">
-                    <div class="col">
-                        <small class="text-muted">Order Details:</small>
-                    </div>
-                </div>
-
-                {% for item in order.lineitems.all %}
-                <div class="row">
-                    <div class="col-12 col-md-4">
-                        <p class="small mb-0 text-black font-weight-bold">
-                            {{ item.product.name }}{% if item.product_size %} - Size {{ item.product_size|upper }}{% endif %}
-                        </p>
-                    </div>
-                    <div class="col-12 col-md-8 text-md-right">
-                        <p class="small mb-0">{{ item.quantity }} @ £{{ item.product.price }} each</p>
-                    </div>
-                </div>
-                {% endfor %}
-
-                <div class="row">
-                    <div class="col">
-                        <small class="text-muted">Delivering To:</small>
-                    </div>
-                </div>
-
-                {% if order.full_name %}
-                <div class="row">
-                    <div class="col-12 col-md-4">
-                        <p class="mb-0 text-black font-weight-bold">Full Name</p>
-                    </div>
-                    <div class="col-12 col-md-8 text-md-right">
-                        <p class="mb-0">{{ order.full_name }}</p>
-                    </div>
-                </div>
-                {% endif %}
-
-                {% if order.street_address1 %}
-                <div class="row">
-                    <div class="col-12 col-md-4">
-                        <p class="mb-0 text-black font-weight-bold">Address 1</p>
-                    </div>
-                    <div class="col-12 col-md-8 text-md-right">
-                        <p class="mb-0">{{ order.street_address1 }}</p>
-                    </div>
-                </div>
-                {% endif %}
-
-                {% if order.street_address2 %}
-                <div class="row">
-                    <div class="col-12 col-md-4">
-                        <p class="mb-0 text-black font-weight-bold">Address 2</p>
-                    </div>
-                    <div class="col-12 col-md-8 text-md-right">
-                        <p class="mb-0">{{ order.street_address2 }}</p>
-                    </div>
-                </div>
-                {% endif %}
-
-                {% if order.county %}
-                <div class="row">
-                    <div class="col-12 col-md-4">
-                        <p class="mb-0 text-black font-weight-bold">County</p>
-                    </div>
-                    <div class="col-12 col-md-8 text-md-right">
-                        <p class="mb-0">{{ order.county }}</p>
-                    </div>
-                </div>
-                {% endif %}
-
-                {% if order.town_or_city %}
-                <div class="row">
-                    <div class="col-12 col-md-4">
-                        <p class="mb-0 text-black font-weight-bold">Town or City</p>
-                    </div>
-                    <div class="col-12 col-md-8 text-md-right">
-                        <p class="mb-0">{{ order.town_or_city }}</p>
-                    </div>
-                </div>
-                {% endif %}
-
-                {% if order.postcode %}
-                <div class="row">
-                    <div class="col-12 col-md-4">
-                        <p class="mb-0 text-black font-weight-bold">Postal Code</p>
-                    </div>
-                    <div class="col-12 col-md-8 text-md-right">
-                        <p class="mb-0">{{ order.postcode }}</p>
-                    </div>
-                </div>
-                {% endif %}
-
-                {% if order.country %}
-                <div class="row">
-                    <div class="col-12 col-md-4">
-                        <p class="mb-0 text-black font-weight-bold">Country</p>
-                    </div>
-                    <div class="col-12 col-md-8 text-md-right">
-                        <p class="mb-0">{{ order.country }}</p>
-                    </div>
-                </div>
-                {% endif %}
-
-                {% if order.phone_number %}
-                <div class="row">
-                    <div class="col-12 col-md-4">
-                        <p class="mb-0 text-black font-weight-bold">Phone Number</p>
-                    </div>
-                    <div class="col-12 col-md-8 text-md-right">
-                        <p class="mb-0">{{ order.phone_number }}</p>
-                    </div>
-                </div>
-                {% endif %}
-
-                <div class="row">
-                    <div class="col">
-                        <small class="text-muted">Billing Info:</small>
-                    </div>
-                </div>
-
-                <div class="row">
-                    <div class="col-12 col-md-4">
-                        <p class="mb-0 text-black font-weight-bold">Order Total</p>
-                    </div>
-                    <div class="col-12 col-md-8 text-md-right">
-                        <p class="mb-0">£{{ order.order_total }}</p>
-                    </div>
-                </div>
-
-                <div class="row">
-                    <div class="col-12 col-md-4">
-                        <p class="mb-0 text-black font-weight-bold">Delivery</p>
-                    </div>
-                    <div class="col-12 col-md-8 text-md-right">
-                        <p class="mb-0">£{{ order.delivery_cost }}</p>
-                    </div>
-                </div>
-
-                <div class="row">
-                    <div class="col-12 col-md-4">
-                        <p class="mb-0 text-black font-weight-bold">Grand Total</p>
-                    </div>
-                    <div class="col-12 col-md-8 text-md-right">
-                        <p class="mb-0">£{{ order.grand_total }}</p>
-                    </div>
-                </div>
+<div class="checkout-page-wrapper">
+    <div class="container checkout-content">
+        <div class="row">
+            <div class="col">
+                <hr>
+                <h2 class="logo-font mb-4 text-uppercase">Order Confirmed</h2>
+                <hr>
+                <p class="text-black">
+                    We've locked and loaded your tools! A confirmation email is heading to <strong>{{ order.email }}</strong>.
+                </p>
             </div>
         </div>
-    </div>
 
-    <!-- Return Button -->
-    <div class="row">
-        <div class="col-12 col-lg-7 text-right">
-            {% if from_profile %}
-                <a href="{% url 'profile' %}" class="btn btn-black rounded-0 my-2">
+        <div class="row">
+            <div class="col-12 col-lg-7">
+                <fieldset class="rounded px-3 py-4 mb-5 border order-confirmation-wrapper">
+                    <legend class="fieldset-label small text-black px-2 w-auto">Order Information</legend>
+
+                    <div class="row mb-3">
+                        <div class="col-md-4 font-weight-bold text-black">Order Number</div>
+                        <div class="col-md-8 text-md-right">{{ order.order_number }}</div>
+                    </div>
+                    <div class="row mb-3">
+                        <div class="col-md-4 font-weight-bold text-black">Order Date</div>
+                        <div class="col-md-8 text-md-right">{{ order.date }}</div>
+                    </div>
+
+                    <hr class="my-3">
+                    <small class="text-muted">Order Details:</small>
+                    {% for item in order.lineitems.all %}
+                    <div class="row mb-2">
+                        <div class="col-md-4 font-weight-bold text-black">
+                            {{ item.product.name }}{% if item.product_size %} - Size {{ item.product_size|upper }}{% endif %}
+                        </div>
+                        <div class="col-md-8 text-md-right">
+                            {{ item.quantity }} @ £{{ item.product.price }} each
+                        </div>
+                    </div>
+                    {% endfor %}
+
+                    <hr class="my-3">
+                    <small class="text-muted">Delivering To:</small>
+                    {% if order.full_name %}
+                    <div class="row mb-2">
+                        <div class="col-md-4 font-weight-bold text-black">Full Name</div>
+                        <div class="col-md-8 text-md-right">{{ order.full_name }}</div>
+                    </div>
+                    {% endif %}
+                    {% if order.street_address1 %}
+                    <div class="row mb-2">
+                        <div class="col-md-4 font-weight-bold text-black">Address 1</div>
+                        <div class="col-md-8 text-md-right">{{ order.street_address1 }}</div>
+                    </div>
+                    {% endif %}
+                    {% if order.street_address2 %}
+                    <div class="row mb-2">
+                        <div class="col-md-4 font-weight-bold text-black">Address 2</div>
+                        <div class="col-md-8 text-md-right">{{ order.street_address2 }}</div>
+                    </div>
+                    {% endif %}
+                    {% if order.county %}
+                    <div class="row mb-2">
+                        <div class="col-md-4 font-weight-bold text-black">County</div>
+                        <div class="col-md-8 text-md-right">{{ order.county }}</div>
+                    </div>
+                    {% endif %}
+                    {% if order.town_or_city %}
+                    <div class="row mb-2">
+                        <div class="col-md-4 font-weight-bold text-black">Town or City</div>
+                        <div class="col-md-8 text-md-right">{{ order.town_or_city }}</div>
+                    </div>
+                    {% endif %}
+                    {% if order.postcode %}
+                    <div class="row mb-2">
+                        <div class="col-md-4 font-weight-bold text-black">Postal Code</div>
+                        <div class="col-md-8 text-md-right">{{ order.postcode }}</div>
+                    </div>
+                    {% endif %}
+                    {% if order.country %}
+                    <div class="row mb-2">
+                        <div class="col-md-4 font-weight-bold text-black">Country</div>
+                        <div class="col-md-8 text-md-right">{{ order.country }}</div>
+                    </div>
+                    {% endif %}
+                    {% if order.phone_number %}
+                    <div class="row mb-2">
+                        <div class="col-md-4 font-weight-bold text-black">Phone Number</div>
+                        <div class="col-md-8 text-md-right">{{ order.phone_number }}</div>
+                    </div>
+                    {% endif %}
+
+                    <hr class="my-3">
+                    <small class="text-muted">Billing Info:</small>
+                    <div class="row mb-2">
+                        <div class="col-md-4 font-weight-bold text-black">Order Total</div>
+                        <div class="col-md-8 text-md-right">£{{ order.order_total }}</div>
+                    </div>
+                    <div class="row mb-2">
+                        <div class="col-md-4 font-weight-bold text-black">Delivery</div>
+                        <div class="col-md-8 text-md-right">£{{ order.delivery_cost }}</div>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-4 font-weight-bold text-black">Grand Total</div>
+                        <div class="col-md-8 text-md-right">£{{ order.grand_total }}</div>
+                    </div>
+                </fieldset>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-12 col-lg-7 text-right">
+                {% if from_profile %}
+                <a href="{% url 'profile' %}" class="btn btn-navy rounded-0 my-2 font-weight-bold">
                     <span class="icon mr-2"><i class="fas fa-angle-left"></i></span>
-                    <span class="text-uppercase">Back to Profile</span>
+                    Back to Profile
                 </a>
-            {% else %}
-                <a href="{% url 'products' %}?category=new_arrivals,deals,clearance" class="btn btn-black rounded-0 my-2">
+                {% else %}
+                <a href="{% url 'products' %}?category=new_arrivals,deals,clearance" class="btn btn-navy rounded-0 my-2 font-weight-bold">
                     <span class="icon mr-2"><i class="fas fa-wrench"></i></span>
-                    <span class="text-uppercase">Continue Shopping Tools</span>
+                    Continue Shopping Tools
                 </a>
-            {% endif %}
+                {% endif %}
+            </div>
         </div>
     </div>
 </div>
