--- a/templates/allauth/account/login.html
+++ b/templates/allauth/account/login.html
@@ -8,54 +8,45 @@
 
 {% block content %}
 <div class="content-wrapper">
-    <div class="form-container">
-        <hr>
-        <h2 class="logo-font mb-4 text-uppercase">{% trans "Sign In" %}</h2>
-        <hr>
+  <div class="form-container">
+    <hr>
+    <h2 class="logo-font mb-4 text-uppercase">{% trans "Sign In" %}</h2>
+    <hr>
 
-        {% get_providers as socialaccount_providers %}
-        {% if socialaccount_providers %}
-            <p>
-                {% blocktrans with site.name as site_name %}
-                    Please sign in with one of your existing third party accounts.
-                    Or, <a href="{{ signup_url }}">sign up</a> for a {{ site_name }} account and sign in below:
-                {% endblocktrans %}
-            </p>
+    {% get_providers as socialaccount_providers %}
+    {% if socialaccount_providers %}
+      <p>
+        {% blocktrans with site.name as site_name %}
+          Please sign in with one of your existing third party accounts.
+          Or, <a href="{{ signup_url }}" class="signup-link">sign up</a> for a {{ site_name }} account and sign in below:
+        {% endblocktrans %}
+      </p>
+    {% else %}
+      <p>
+        {% blocktrans %}
+          If you have not created an account yet, then please
+          <a href="{{ signup_url }}" class="signup-link">SIGN UP</a> first.
+        {% endblocktrans %}
+      </p>
+    {% endif %}
 
-            <div class="socialaccount_ballot">
-                <ul class="socialaccount_providers">
-                    {% include "socialaccount/snippets/provider_list.html" with process="login" %}
-                </ul>
-                <div class="login-or text-center my-3">{% trans 'or' %}</div>
-            </div>
+    <form method="POST" action="{% url 'account_login' %}">
+      {% csrf_token %}
+      {{ form|crispy }}
 
-            {% include "socialaccount/snippets/login_extra.html" %}
-        {% else %}
-            <p>
-                {% blocktrans %}
-                    If you have not created an account yet,
-                    then please <a href="{{ signup_url }}">sign up</a> first.
-                {% endblocktrans %}
-            </p>
-        {% endif %}
+      {% if redirect_field_value %}
+        <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}">
+      {% endif %}
 
-        <form method="POST" action="{% url 'account_login' %}">
-            {% csrf_token %}
-            {{ form|crispy }}
+      <div class="d-flex flex-wrap justify-content-between align-items-center mt-4">
+        <a class="btn btn-outline-navy rounded-0 mb-2" href="{% url 'home' %}">{% trans "Home" %}</a>
+        <button class="btn btn-navy rounded-0 mb-2" type="submit">{% trans "Sign In" %}</button>
+      </div>
 
-            {% if redirect_field_value %}
-                <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
-            {% endif %}
-
-            <div class="d-flex flex-wrap justify-content-between align-items-center mt-4">
-                <a class="btn btn-outline-navy rounded-0 mb-2" href="{% url 'home' %}">{% trans "Home" %}</a>
-                <button class="btn btn-navy rounded-0 mb-2" type="submit">{% trans "Sign In" %}</button>
-            </div>
-
-            <div class="text-right mt-2">
-                <a class="text-info" href="{% url 'account_reset_password' %}">{% trans "Forgot Password?" %}</a>
-            </div>
-        </form>
-    </div>
+      <div class="text-right mt-2">
+        <a class="text-info" href="{% url 'account_reset_password' %}">{% trans "Forgot Password?" %}</a>
+      </div>
+    </form>
+  </div>
 </div>
 {% endblock %}
