--- a/templates/includes/toasts/toast_success.html
+++ b/templates/includes/toasts/toast_success.html
@@ -40,7 +40,7 @@
                         <div class="col-9">
                             <p class="mb-1"><strong>{{ item.product.name }}</strong></p>
                             <p class="mb-1 small">Option: {% if item.product.has_sizes %}{{ item.size|upper }}{% else %}N/A{% endif %}</p>
-                            <p class="mb-1 small text-muted">Qty: {{ item.quantity }}</p>
+                            <p class="mb-1 small text-white">Qty: {{ item.quantity }}</p>
                         </div>
                     </div>
                 {% endfor %}
@@ -52,11 +52,13 @@
                         Total{% if free_delivery_delta > 0 %} (Excl. delivery){% endif %}:
                         <span class="float-right">£{{ total|floatformat:2 }}</span>
                     </p>
+
                     {% if free_delivery_delta > 0 %}
-                        <p class="mb-0 p-2 bg-warning text-black text-center shadow-sm">
+                        <p class="free-delivery-toast mb-0 p-2 text-center shadow-sm">
                             Add <strong>£{{ free_delivery_delta|floatformat:2 }}</strong> more for free delivery!
                         </p>
                     {% endif %}
+
                     <a href="{% url 'view_bag' %}" class="btn btn-navy btn-block rounded-0 mt-3">
                         <span class="text-uppercase">Go To Secure Checkout</span>
                         <span class="icon"><i class="fas fa-lock"></i></span>
